src/objects/Astrum_Contract__c.object
<CustomObject>
    <description>Contract object to facilitate Conga Contracts</description>
    <fields>
        <fullName>Billing_Address_Line_1__c</fullName>
        <label>Billing Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_2__c</fullName>
        <label>Billing Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_County__c</fullName>
        <label>Billing County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Discount_Amount__c</fullName>
        <label>Cash Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Rebate_Amount__c</fullName>
        <label>Cash Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Program_Tier__c</fullName>
        <label>Community Program Tier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Execution_Date__c</fullName>
        <label>Contract Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_PDF_Name__c</fullName>
        <description>Determines what the Contract PDF will be named when it&apos;s generated by Conga</description>
        <label>Contract PDF Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Template_IDs__c</fullName>
        <description>IDs of the Conga templates to put in the URL when generating a new Contract PDF</description>
        <label>Contract Template IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Lease_Tax_Rate__c</fullName>
        <label>County Lease Tax Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cumulative_Guaranteed_Sys_Output__c</fullName>
        <description>Sum of all &quot;Guaranteed Sys Output kWh Year N&quot; fields</description>
        <label>Cumulative Guaranteed Sys Output</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <description>Amount the customer will use as down payment.</description>
        <inlineHelpText>Amount the customer will use as down payment.</inlineHelpText>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Interconnect_Date__c</fullName>
        <label>Est Interconnect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Year_One_Price_Per_KWH__c</fullName>
        <label>Estimated Year One Price Per KWH</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_Credit__c</fullName>
        <description>Available Federal Tax Credit.</description>
        <inlineHelpText>Available Federal Tax Credit.</inlineHelpText>
        <label>Federal Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <formula>IF (ISPICKVAL(Scenario__c, &apos;1&apos;),
	TEXT(Proposal__r.System_Design_Quote__r.Scenario_1_Financing_Type__c),
	
	IF (ISPICKVAL(Scenario__c, &apos;2&apos;),
		TEXT(Proposal__r.System_Design_Quote__r.Scenario_2_Financing_Type__c),
		
		IF (ISPICKVAL(Scenario__c, &apos;3&apos;),
			TEXT(Proposal__r.System_Design_Quote__r.Scenario_3_Financing_Type__c),
			
			IF (ISPICKVAL(Scenario__c, &apos;4&apos;),
				TEXT(Proposal__r.System_Design_Quote__r.Scenario_4_Financing_Type__c), &apos;&apos;
			)
		)
	)
)</formula>
        <label>Financing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Month_Payment_Post_Tax__c</fullName>
        <label>First Month Payment Post Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Month_Payment_Pre_Tax__c</fullName>
        <formula>IF (ISPICKVAL(Scenario__c, &apos;1&apos;),
Proposal__r.System_Design_Quote__r.Scenario_1_First_Month_Payment__c,

IF (ISPICKVAL(Scenario__c, &apos;2&apos;),
Proposal__r.System_Design_Quote__r.Scenario_2_First_Month_Payment__c,

IF (ISPICKVAL(Scenario__c, &apos;3&apos;),
Proposal__r.System_Design_Quote__r.Scenario_3_First_Month_Payment__c,

IF (ISPICKVAL(Scenario__c, &apos;4&apos;),
Proposal__r.System_Design_Quote__r.Scenario_4_First_Month_Payment__c, 0
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Month Payment Pre Tax</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_Property_Address__c</fullName>
        <formula>Property_Address_Line_1__c &amp; IF(ISBLANK(Property_Address_Line_2__c), &quot;&quot;, &quot; &quot; &amp; Property_Address_Line_2__c) &amp; &quot;, &quot; &amp; Property_City__c &amp; &quot;, &quot; &amp; Property_State__c &amp; &quot; &quot; &amp; Property_Zip__c</formula>
        <label>Full Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Amount_Due__c</fullName>
        <label>Gross Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guarantee_Years_New_Roof_Num__c</fullName>
        <description>New Roof Guarantee years (number).</description>
        <label>Guarantee Years New Roof</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Years_New_Roof_Text__c</fullName>
        <description>New Roof Guarantee years (text).</description>
        <inlineHelpText>New Roof Guarantee years (text).</inlineHelpText>
        <label>Guarantee Years New Roof Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantee_Years_System_Moving_Num__c</fullName>
        <description>System Moving Guarantee years (number).</description>
        <inlineHelpText>System Moving Guarantee years (number).</inlineHelpText>
        <label>Guarantee Years System Moving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Years_System_Moving_Text__c</fullName>
        <description>System Moving Guarantee years (text).</description>
        <inlineHelpText>System Moving Guarantee years (text).</inlineHelpText>
        <label>Guarantee Years System Moving Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Price_Per_kWh_Year_10__c</fullName>
        <label>Guaranteed Price Per kWh Year 10</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Price_Per_kWh_Year_11__c</fullName>
        <label>Guaranteed Price Per kWh Year 11</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Price_Per_kWh_Year_12__c</fullName>
        <label>Guaranteed Price Per kWh Year 12</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Sys_Output_kWh_Year_10__c</fullName>
        <label>Guaranteed Sys Output kWh Year 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Sys_Output_kWh_Year_11__c</fullName>
        <label>Guaranteed Sys Output kWh Year 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Sys_Output_kWh_Year_12__c</fullName>
        <label>Guaranteed Sys Output kWh Year 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Term_Production_Estimate__c</fullName>
        <label>Initial Term Production Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interconnect_Payment__c</fullName>
        <label>Interconnect Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inverter_Count__c</fullName>
        <label>Inverter Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer__c</fullName>
        <label>Inverter Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <description>Type of inverter.</description>
        <inlineHelpText>Type of inverter.</inlineHelpText>
        <label>Inverter Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kilowatt_Other_Charges__c</fullName>
        <label>Kilowatt Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Escalator__c</fullName>
        <label>Lease Escalator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <formula>IF (ISPICKVAL(Scenario__c, &apos;1&apos;),
	Proposal__r.System_Design_Quote__r.Scenario_1_Lease_Fund__r.Name,
	
	IF (ISPICKVAL(Scenario__c, &apos;2&apos;),
		Proposal__r.System_Design_Quote__r.Scenario_2_Lease_Fund__r.Name,
		
		IF (ISPICKVAL(Scenario__c, &apos;3&apos;),
			Proposal__r.System_Design_Quote__r.Scenario_3_Lease_Fund__r.Name,
			
			IF (ISPICKVAL(Scenario__c, &apos;4&apos;),
				Proposal__r.System_Design_Quote__r.Scenario_4_Lease_Fund__r.Name, &apos;&apos;
			)
		)
	)
)</formula>
        <label>Lease Fund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Option__c</fullName>
        <formula>IF (ISPICKVAL(Scenario__c, &apos;1&apos;),
	TEXT(Proposal__r.System_Design_Quote__r.Scenario_1_Lease_Option__c),
	
	IF (ISPICKVAL(Scenario__c, &apos;2&apos;),
		TEXT(Proposal__r.System_Design_Quote__r.Scenario_2_Lease_Option__c),
		
		IF (ISPICKVAL(Scenario__c, &apos;3&apos;),
			TEXT(Proposal__r.System_Design_Quote__r.Scenario_3_Lease_Option__c),
			
			IF (ISPICKVAL(Scenario__c, &apos;4&apos;),
				TEXT(Proposal__r.System_Design_Quote__r.Scenario_4_Lease_Option__c), &apos;&apos;
			)
		)
	)
)</formula>
        <label>Lease Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Tax_Credit__c</fullName>
        <description>Local tax credit applicable to the customer.</description>
        <inlineHelpText>Local tax credit applicable to the customer.</inlineHelpText>
        <label>Local Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module_Manufacturer__c</fullName>
        <label>Module Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Device__c</fullName>
        <description>Monitoring device for use with system.</description>
        <inlineHelpText>Monitoring device for use with system.</inlineHelpText>
        <label>Monitoring Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Year_10__c</fullName>
        <label>Monthly Payment Year 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Year_11__c</fullName>
        <label>Monthly Payment Year 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Year_12__c</fullName>
        <label>Monthly Payment Year 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Proceeds__c</fullName>
        <label>Net Proceeds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OID_Amount__c</fullName>
        <inlineHelpText>Original Issue Discount Amount</inlineHelpText>
        <label>OID Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Address__c</fullName>
        <description>Drawn from Property.Astrum_Office_Lookup (as of 7/24/15)</description>
        <label>Office Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Quote__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Open Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPA_Buyout_Discount_Rate__c</fullName>
        <formula>IF(Financing_Type__c == &apos;PPA&apos;, 

IF (ISPICKVAL(Scenario__c, &apos;1&apos;),
Proposal__r.System_Design_Quote__r.Scenario_1_Lease_Fund__r.Buyout_Discount_Rate__c,

IF (ISPICKVAL(Scenario__c, &apos;2&apos;),
Proposal__r.System_Design_Quote__r.Scenario_2_Lease_Fund__r.Buyout_Discount_Rate__c,

IF (ISPICKVAL(Scenario__c, &apos;3&apos;),
Proposal__r.System_Design_Quote__r.Scenario_3_Lease_Fund__r.Buyout_Discount_Rate__c,

IF (ISPICKVAL(Scenario__c, &apos;4&apos;),
Proposal__r.System_Design_Quote__r.Scenario_4_Lease_Fund__r.Buyout_Discount_Rate__c, 0)
)
)
), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPA Buyout Discount Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PPA_System_Buyout_Basis_EPC__c</fullName>
        <description>See the &quot;System Buyout Basis EPC&quot; field on Lease Fund</description>
        <label>PPA System Buyout Basis EPC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Panel_Count__c</fullName>
        <description>Number of solar panels.</description>
        <inlineHelpText>Number of solar panels.</inlineHelpText>
        <label>Panel Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <description>Type of solar panel.</description>
        <inlineHelpText>Type of solar panel.</inlineHelpText>
        <label>Panel Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepaid_Avg_Price_Per_KWH__c</fullName>
        <formula>Total_Prepaid_Lease_Amount__c / Cumulative_Guaranteed_Sys_Output__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepaid Avg Price Per KWH</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prepaid_Lease_Install_Payment__c</fullName>
        <formula>Total_Prepaid_Lease_Amount__c - Prepaid_Lease_Upfront_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepaid Lease Install Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prepaid_Lease_Upfront_Payment__c</fullName>
        <label>Prepaid Lease Upfront Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Address_Line_1__c</fullName>
        <label>Property Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_Line_2__c</fullName>
        <label>Property Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <label>Property County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <label>Property Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Astrum Contracts</relationshipLabel>
        <relationshipName>Astrum_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_Due_Final_Inspection__c</fullName>
        <description>Amount due at final inspection for purchase.</description>
        <inlineHelpText>Amount due at final inspection for purchase.</inlineHelpText>
        <label>Purchase Price Due Final Inspection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_Due_First_Day_Install__c</fullName>
        <description>Amount due at first day of install for purchase.</description>
        <inlineHelpText>Amount due at first day of install for purchase.</inlineHelpText>
        <label>Purchase Price Due First Day Install</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_Due_at_Signing__c</fullName>
        <description>Amount due at signing.</description>
        <inlineHelpText>Amount due at signing.</inlineHelpText>
        <label>Purchase Price Due at Signing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAC_APR__c</fullName>
        <label>SAC OID</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SAC_Balloon_Payment__c</fullName>
        <label>SAC Balloon Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAC_Completion_Payment__c</fullName>
        <label>SAC Completion Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAC_Finance_Charge__c</fullName>
        <label>SAC Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAC_Financed_Amount__c</fullName>
        <label>SAC Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAC_Interconnect_Payment__c</fullName>
        <label>SAC Interconnect Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAC_Loan__c</fullName>
        <formula>IF (ISPICKVAL(Scenario__c, &apos;1&apos;),
	Proposal__r.System_Design_Quote__r.Scenario_1_SAC_Loan__r.Name,
	
	IF (ISPICKVAL(Scenario__c, &apos;2&apos;),
		Proposal__r.System_Design_Quote__r.Scenario_2_SAC_Loan__r.Name,
		
		IF (ISPICKVAL(Scenario__c, &apos;3&apos;),
			Proposal__r.System_Design_Quote__r.Scenario_3_SAC_Loan__r.Name,
			
			IF (ISPICKVAL(Scenario__c, &apos;4&apos;),
				Proposal__r.System_Design_Quote__r.Scenario_4_SAC_Loan__r.Name, &apos;&apos;
			)
		)
	)
)</formula>
        <label>SAC Loan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAC_Maturity_Date__c</fullName>
        <label>SAC Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAC_Total_Payment__c</fullName>
        <inlineHelpText>SAC Interconnect Payment + SAC Completion Payment</inlineHelpText>
        <label>SAC Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAC_Total_Payments__c</fullName>
        <label>SAC Total Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Cash_Back__c</fullName>
        <description>Pulled from SDQ field</description>
        <label>SREC Cash Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Discount__c</fullName>
        <description>Pulled from SDQ field</description>
        <label>SREC Contract Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario__c</fullName>
        <label>Scenario</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sighten_Contract_uuid__c</fullName>
        <description>Contains the uuid for the contract in the Sighten system</description>
        <externalId>true</externalId>
        <label>Sighten Contract uuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sighten_Signing_Status__c</fullName>
        <label>Sighten Signing Status</label>
        <picklist>
            <picklistValues>
                <fullName>NOT SIGHTEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NOT SENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIGNED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOWNLOADED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERROR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signatory_1_Email__c</fullName>
        <label>Signatory 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Signatory_1_Phone__c</fullName>
        <description>Phone number for Signatory 1.</description>
        <inlineHelpText>Phone number for Signatory 1.</inlineHelpText>
        <label>Signatory 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Signatory_1__c</fullName>
        <label>Signatory 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signatory_2_Email__c</fullName>
        <label>Signatory 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Signatory_2_Phone__c</fullName>
        <description>Phone number for Signatory 2.</description>
        <inlineHelpText>Phone number for Signatory 2.</inlineHelpText>
        <label>Signatory 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Signatory_2__c</fullName>
        <label>Signatory 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Grant_Amount__c</fullName>
        <description>Value for the State Grant applicable to the customer.</description>
        <label>State Grant Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Grant_Tax_Amount__c</fullName>
        <label>State Grant Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Tax_Credit__c</fullName>
        <description>Available state tax credit for the customer.</description>
        <inlineHelpText>Available state tax credit for the customer.</inlineHelpText>
        <label>State Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Design_Quote_Name__c</fullName>
        <description>Proposal&apos;s SDQ</description>
        <formula>Proposal__r.System_Design_Quote__r.Name</formula>
        <label>System Design Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Design_Reconstruction_Record__c</fullName>
        <label>System Design Reconstruction Record</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Net_Cost__c</fullName>
        <description>Net cost of solar system.</description>
        <inlineHelpText>Net cost of solar system.</inlineHelpText>
        <label>System Net Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Purchase_Price_After_Adjustments__c</fullName>
        <label>System Purchase Price After Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <description>Size of system in kW.</description>
        <inlineHelpText>Size of system in kW.</inlineHelpText>
        <label>System Size</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Loan_APR__c</fullName>
        <label>Term Loan APR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term_Loan_Completion_Payment__c</fullName>
        <label>Term Loan Completion Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Loan_Est_Completion_Date__c</fullName>
        <label>Term Loan Est Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Loan_Finance_Charge__c</fullName>
        <label>Term Loan Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Loan_Financed_Amount__c</fullName>
        <label>Term Loan Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Loan_First_Payment_Date__c</fullName>
        <label>Term Loan First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Loan_Interconnect_Payment__c</fullName>
        <label>Term Loan Interconnect Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Loan_Last_Payment_Date__c</fullName>
        <label>Term Loan Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Loan_Monthly_Payment__c</fullName>
        <label>Term Loan Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Loan_Term__c</fullName>
        <description>Number of months of payments.</description>
        <label>Term Loan Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Loan_Total_Payments__c</fullName>
        <inlineHelpText># Months x Monthly Payment</inlineHelpText>
        <label>Term Loan Total Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Loan__c</fullName>
        <formula>IF (ISPICKVAL(Scenario__c, &apos;1&apos;),
	Proposal__r.System_Design_Quote__r.Scenario_1_Term_Loan__r.Name,
	
	IF (ISPICKVAL(Scenario__c, &apos;2&apos;),
		Proposal__r.System_Design_Quote__r.Scenario_2_Term_Loan__r.Name,
		
		IF (ISPICKVAL(Scenario__c, &apos;3&apos;),
			Proposal__r.System_Design_Quote__r.Scenario_3_Term_Loan__r.Name,
			
			IF (ISPICKVAL(Scenario__c, &apos;4&apos;),
				Proposal__r.System_Design_Quote__r.Scenario_4_Term_Loan__r.Name, &apos;&apos;
			)
		)
	)
)</formula>
        <label>Term Loan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Prepaid_Lease_Amount__c</fullName>
        <label>Total Prepaid Lease Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_System_Price__c</fullName>
        <description>Total cost of system price.</description>
        <inlineHelpText>Total cost of system price.</inlineHelpText>
        <label>Total System Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Paid__c</fullName>
        <label>Total Tax Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_All_Payments__c</fullName>
        <label>Total of All Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_Monthly_Payments_Post_Tax__c</fullName>
        <description>Total of all monthly payments excluding upfront payment (AFTER Taxes)</description>
        <label>Total of Monthly Payments Post Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_Monthly_Payments_Pre_Tax__c</fullName>
        <label>Total of Monthly Payments Pre Tax</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_SREC_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Upfront SREC Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_Incentive_Amount__c</fullName>
        <description>Does the option qualify for any Utility Incentives?</description>
        <label>Utility Incentive Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Years_Inverter_Num__c</fullName>
        <description>Warranty years for Inverters (number format).</description>
        <inlineHelpText>Warranty years for Inverters (number format).</inlineHelpText>
        <label>Warranty Years Inverter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Years_Inverter_Text__c</fullName>
        <description>Warranty years for Inverters (text format).</description>
        <label>Warranty Years Inverter Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Years_Limited_Production_Num__c</fullName>
        <description>Limited Production Warranty years (number).</description>
        <inlineHelpText>Limited Production Warranty years (number).</inlineHelpText>
        <label>Warranty Years Limited Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Years_Limited_Production_Text__c</fullName>
        <description>Limited Production Warranty years (text).</description>
        <inlineHelpText>Limited Production Warranty years (text).</inlineHelpText>
        <label>Warranty Years Limited Production Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>